--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,7 @@ body {
 .logoContainer {
   opacity: 0;
   transform: translateY(30px);
-  animation: floatUp 2s forwards;
+  animation: floatUp 3s forwards;
 }
 
 @keyframes floatUp {
@@ -62,4 +62,16 @@ body {
   0% { transform: translateY(0); }
   50% { transform: translateY(-30px); }
   100% { transform: translateY(0); }
+}
+
+.background2::before {
+  content: "";
+  background-image: url('https://minio.saksiam.co.th/public/saktech/logo/260439-P4TBBB-678-ai.png');
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  z-index: -1;
 }
