--- a/app/globals.css
+++ b/app/globals.css
@@ -75,3 +75,11 @@ body {
   opacity: 0.1;
   z-index: -1;
 }
+
+canvas.drawingBuffer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
